# BULLETUAV

./: BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  ENHANCED_OPTICAL_TRACKER.md  FINAL_ANALYSIS_REPORT.md  LICENSE  OPENCV.md  README.md  README.md~  gitcreate.fish  interate_c.sh  project_status.md
config/communication/: encryption_settings.yaml
config/flight/: flight_envelope.yaml
config/mission/: mission_profiles.yaml
config/targeting/: targeting_params.yaml
data/signatures/: shahed_signatures.yaml
docs/technical/specifications/: performance_specs.md
maintenance/scheduled/daily_checks/: pre_flight_inspection.md
military/targets/threat_catalog/: shahed_variants.md
scripts/deployment/: deploy_field.sh
scripts/testing/: run_unit_tests.sh
src/: tracking_readme.md
src/engine/turbine/: turbine_controller.h
src/guidance/navigation/: proportional_nav.h
src/sensors/: CMakeLists.txt
src/sensors/optical/: enhanced_optical_tracker.cpp  enhanced_optical_tracker.h  optical_tracker.cpp  optical_tracker.h
src/targeting/: CMakeLists.txt
src/targeting/core/: targeting_core.cpp  targeting_core.h
tests/simulation/scenarios/: shahed_intercept.py
tests/unit/targeting/: targeting_tests.cpp
tracker/: CMakeLists.txt  tracker.cpp  tracker.hpp
